Changes for Filter Effects specification
----------------------------------------

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Replace SVGAnimatedColor with SVGAnimatedString.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added clarification for 'color-interpolation-filters' property.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-25  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-23  Dirk Schulze  <dschulze@adobe.com>
- Clean-up.

2013-08-22  Dirk Schulze  <dschulze@adobe.com>
- Clean-up. Remove hint about performance increase because of security concerns.

2013-08-17  Dirk Schulze  <dschulze@adobe.com>
- Specify filter() image function and interpolation.

2013-08-14  Dirk Schulze  <dschulze@adobe.com>
- Clarify interpolation behavior more.

2013-08-13  Dirk Schulze  <dschulze@adobe.com>
- Fix initial values for interpolation on grayscale, invert and sepia.

2013-08-05  Dirk Schulze  <dschulze@adobe.com>
- Clarify lacuna values for filter shorthands.
- Fix a bug with drop-shadow syntax.

2013-07-16  Dirk Schulze  <dschulze@adobe.com>
- Be more explicit on parsing instructions for filter functions.

2013-07-14  Dirk Schulze  <dschulze@adobe.com>
- Explicitly state allowed ranges and lacuna values for filter functions.

2013-07-09  Dirk Schulze  <dschulze@adobe.com>
- Just support one shadow item for drop-shadow in the first level.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Clarify that filter functions operate in sRGB
- Clarify interpolation between filter functions.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Add child selector as property value to filter property.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Dimension and origin of passed image to filter() CSS Image function must be preserved.

2013-06-12  Dirk Schulze  <dschulze@adobe.com>
- Removed support for 'enable-background' and require 'isolation' instead.

2013-06-08  Dirk Schulze  <dschulze@adobe.com>