@@ -1,6 +1,14 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-09-306  Dirk Schulze  <dschulze@adobe.com>
+- Allow <string> in CSS image filter() function to match behavior on other CSS Images.
+
+2013-08-31  Dirk Schulze  <dschulze@adobe.com>
+- Added edgeMode attribute to feGaussianBlur
+- Specify that edgeMode computes to 'none' for 'filter' property
+  and 'duplicate' for filter() CSS Image function.
+
 2013-08-26  Dirk Schulze  <dschulze@adobe.com>
 - Replace SVGAnimatedColor with SVGAnimatedString.
 
